templates/tenants/deployments/matello-tech/07-django-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: nbweb
  labels:
    app: nbweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nbweb
  template:  
    metadata:
      labels: 
        app: nbweb
    spec:    
      containers:
        - name: nbweb
          image: vakem/nbwebapp:v1.0
          imagePullPolicy: Always
          command: ['/bin/sh']           #<-- Add Command to run at start-up
          args: ['-c','python manage.py makemigrations; python manage.py migrate; python manage.py runserver 0.0.0.0:8000']
          ports: 
            - containerPort: 8000
