templates/tenants/deployments/matello-tech/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: usermgmt-webapp
  labels:
    app: usermgmt-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermgmt-webapp
  template:  
    metadata:
      labels: 
        app: usermgmt-webapp
    spec:
      containers:
        - name: usermgmt-webapp
          image: vakem/nbwebsiteimage:latest
          imagePullPolicy: Always
          command: ['/bin/bash']           #<-- Add Command to run at start-up
          args: ['-c','python manage.py migrate; python manage.py runserver 0.0.0.0:8000']
          ports: 
            - containerPort: 8000
