templates/tenants/deployments/matello-tech/usermgtwebapp.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: usermgmt-webapp
  labels:
    app: usermgmt-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermgmt-webapp
  template:  
    metadata:
      labels: 
        app: usermgmt-webapp
    spec:
      containers:
        - name: usermgmt-webapp
          image: vakem/nbwebsiteimage:latest
          imagePullPolicy: Always
          ports: 
            - containerPort: 8080
