templates/tenants/deployments/matello-tech/08-django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service1
  namespace: matello-tech
spec:
  selector:
    app: nbweb
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
