templates/tenants/deployments/matello-tech/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usermgmt-webapp-service
  labels: 
    app: usermgmt-webapp
spec: 
  type: ClusterIP
  selector: 
    app: usermgmt-webapp
  ports: 
    - port: 80000
      targetPort: 8000
