templates/tenants/deployments/matello-tech/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service1
  namespace: web1
spec:
  selector:
    app: web1
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 8080
