templates/tenants/deployments/matello-tech/usermgtwebapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usermgmt-webapp-clusterip-service
  labels: 
    app: usermgmt-webapp
spec:
  type: ClusterIP
  selector:
    app: usermgmt-webapp
  ports: 
    - port: 80
      targetPort: 8080
