templates/tenants/deployments/matello-tech/nbapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server1
  namespace: web1
spec:
  selector:
    matchLabels:
      app: web1
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
      - name: httpd
        image: vakem/nbwebsiteimage:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web-server-service1
  namespace: web1
spec:
  selector:
    app: web1
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress1
  namespace: web1
spec:
  ingressClassName: nginx
  rules:
  - host: nexgbitsapp.nexgbits.com
    http:
      paths:
      - path: /web1
        pathType: Prefix
        backend:
          service:
            name: web-server-service1
            port:
              number: 5001
